--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,9 @@
         "php": "^8.4",
         "ext-json": "*",
         "ext-mbstring": "*",
-        "ext-session": "*"
+        "ext-session": "*",
+        "symfony/html-sanitizer": "^8.0",
+        "symfony/validator": "^8.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^11.0",
